<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/credentials_header">

        <EditTextPreference
            app:key="server_url"
            app:title="@string/server_url"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="username"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:key="password"
            app:title="@string/password"
            android:imeOptions="actionDone"
            />

    </PreferenceCategory>
</PreferenceScreen>