<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/image_content_description"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@+id/imageViewStatic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@android:drawable/presence_offline"
        tools:srcCompat="@android:drawable/presence_busy" />

    <ImageView
        android:id="@+id/imageViewStatic"
        android:layout_width="173dp"
        android:layout_height="147dp"
        android:contentDescription="@string/image_content_description"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayout02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@mipmap/ic_launcher"
        tools:srcCompat="@mipmap/ic_launcher"
        tools:visibility="visible" />


    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageViewStatic"
        app:layout_constraintBottom_toTopOf="@id/textViewDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button_door"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="20dp"
            android:insetRight="20dp"
            android:text="@string/door" />

        <Button
            android:id="@+id/button_gate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="20dp"
            android:insetRight="20dp"
            android:text="@string/gate" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDetails"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.153" />


</androidx.constraintlayout.widget.ConstraintLayout>